--- a/feladat.html
+++ b/feladat.html
@@ -1,17 +1,17 @@
-<b>start</b> - 2022.11.27 09:02:12<br />
+<b>start</b> - 2022.11.28 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.36982248520710925<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -39.260000000000005<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
 Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
-Hungary_FlatMattInBudapest, not updated, 0.0<br />
+Hungary_FlatMattInBudapest, not updated, 0.6000000000000085<br />
 USA_PrattvillePansy, not updated, 0.0<br />
 Hungary_MinerSymbol, not updated, 0.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
@@ -20,7 +20,7 @@ NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.3222341568206275<br />
-Finland_Nurmijarvi, not updated, 0.0<br />
+Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
 Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
@@ -32,12 +32,12 @@ Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 0.0<br />
 Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
-USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_CommerceBarnyard, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.17999999999999972<br />
+USA_StAugustinePirateShip, not updated, 0.35999999999999943<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
@@ -45,252 +45,4 @@ UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.0<br />
 USA_Turtle, not updated, 0.08818342151674585<br />
 Finland_BioOtokka, not updated, 0.0<br />
-Canada_GatineauFMGGarden, not updated, 0.8799999999999955<br />
-Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
-Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
-Switzerland_GiddyUpGo, not updated, 0.0<br />
-Belgium_KnokkeHeist, not updated, 0.25<br />
-Hungary_Evolution, not updated, 0.8333333333333286<br />
-Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
-USA_OfficerDown, not updated, 0.0<br />
-Hungary_Brigetio, not updated, 0.3846153846153797<br />
-Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
-Hungary_TaskasSmiley, not updated, 0.0<br />
-Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
-Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
-Hungary_SurpriseAirline, not updated, 0.0<br />
-Hungary_RubiksCube, not updated, 0.0<br />
-Hungary_GyulaCastle, not updated, 0.0<br />
-USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
-USA_FortMyersAlligator, not updated, 0.0<br />
-Denmark_TheSwanInHilleroed, not updated, 0.0<br />
-Hungary_CsepelObol, not updated, 0.0<br />
-Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
-Czechia_KMZNAK, not updated, 0.0799999999999983<br />
-Luxembourg_LuxembourgFlag, not updated, 0.0<br />
-USA_MarioFireballVoid, not updated, 0.0<br />
-USA_SpyGoggles, not updated, 0.0<br />
-Hungary_Farkas-erdo, not updated, 0.0<br />
-Hungary_CastleOfDiosgyor, not updated, 0.0<br />
-Denmark_GhostInHilleroed, not updated, 0.0<br />
-USA_CherryBomb kihagyva (100%), <br />
-USA_Stormtrooper kihagyva (100%), <br />
-Australia_BeeFlowers kihagyva (100%), <br />
-Australia_BeeSanta kihagyva (100%), <br />
-Australia_BuzzzBee kihagyva (100%), <br />
-Australia_LaidleyBeeHive kihagyva (100%), <br />
-Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
-Canada_MaillardvilleChristmas kihagyva (100%), <br />
-Finland_KokkolanKurpitsainen kihagyva (100%), <br />
-Hungary_10thBirthdayCake kihagyva (100%), <br />
-Hungary_BlackCat kihagyva (100%), <br />
-Hungary_ChainBridge kihagyva (100%), <br />
-Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
-Hungary_DuckAtBalaton kihagyva (100%), <br />
-Hungary_FlagsInBudapest, not updated, 0.0<br />
-Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
-Hungary_FrogInBudaors kihagyva (100%), <br />
-Hungary_SantasSledge kihagyva (100%), <br />
-Hungary_SnoopyInBudapest kihagyva (100%), <br />
-Hungary_SteamshipOnDanube kihagyva (100%), <br />
-Hungary_SurpriseCar kihagyva (100%), <br />
-Hungary_SurpriseInBudapest kihagyva (100%), <br />
-Hungary_SwansByTheDanube kihagyva (100%), <br />
-Lithuania_Akmenynas kihagyva (100%), <br />
-Lithuania_OZOParkas kihagyva (100%), <br />
-Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
-Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
-Netherlands_EVO2Kerkrade kihagyva (100%), <br />
-Slovakia_Alien kihagyva (100%), <br />
-Sweden_SwedishFlag kihagyva (100%), <br />
-UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
-UnitedKingdom_GriffMemorial kihagyva (100%), <br />
-UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
-UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
-UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
-USA_BurlingtonFlamingo kihagyva (100%), <br />
-USA_CandyCaneZee kihagyva (100%), <br />
-USA_ChristmasTree kihagyva (100%), <br />
-USA_GingerbreadMan kihagyva (100%), <br />
-USA_GumballMachine kihagyva (100%), <br />
-USA_HOwlOween kihagyva (100%), <br />
-USA_LakelandCandyCorn kihagyva (100%), <br />
-USA_MamaTsLadybug kihagyva (100%), <br />
-USA_MermaidTail kihagyva (100%), <br />
-USA_OctoberPumpkin kihagyva (100%), <br />
-USA_SantaSirPrize, not updated, 0.0<br />
-USA_Snowman kihagyva (100%), <br />
-USA_SprinkleCupcake kihagyva (100%), <br />
-USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
-USA_WestportSpecials kihagyva (100%), <br />
-Netherlands_TheWall kihagyva (100%), <br />
-Netherlands_PompebledPalet kihagyva (100%), <br />
-Netherlands_GroeneStroom kihagyva (100%), <br />
-Netherlands_Klomp kihagyva (100%), <br />
-Netherlands_EvoAppleEch kihagyva (100%), <br />
-Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
-USA_GreenvilleCloverLeaf kihagyva (100%), <br />
-Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
-Denmark_EmeraldInHilleroed, not updated, 0.0<br />
-Finland_HalkokarinEvovene, not updated, 1.0<br />
-USA_CarettaSeaTurtle kihagyva (100%), <br />
-UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
-Netherlands_LuckyClover kihagyva (100%), <br />
-Poland_Jewel kihagyva (100%), <br />
-Poland_Reksio kihagyva (100%), <br />
-Finland_KokkolanVaakuna kihagyva (100%), <br />
-Germany_PapageiCrumstadt kihagyva (100%), <br />
-USA_XIBirthdayMadHatter kihagyva (100%), <br />
-USA_RobHeartsLou1 kihagyva (100%), <br />
-USA_RobHeartsLou2 kihagyva (100%), <br />
-USA_Corgi kihagyva (100%), <br />
-Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
-Canada_HalloweenInOttawa kihagyva (100%), <br />
-Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.4000000000000057<br />
-USA_LightningBoltInSapphire, not updated, 0.6000000000000085<br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove kihagyva (100%), <br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.07000000000000028<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, not updated, 0.37000000000000455<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
-Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
-Hungary_GyorVgFarm kihagyva (100%), <br />
-Hungary_GyoriVasutiKert, not updated, 0.0<br />
-Hungary_Colors kihagyva (100%), <br />
-Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, -69.0<br />
-Hungary_60Color kihagyva (100%), <br />
-Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen2202, not updated, 0.0<br />
-Hungary_EvolutionDebrecen kihagyva (100%), <br />
-Hungary_JewelSandwich, not updated, 0.0<br />
-Hungary_Cimbi kihagyva (100%), <br />
-Hungary_Picu kihagyva (100%), <br />
-Hungary_Honey kihagyva (100%), <br />
-Hungary_QR kihagyva (100%), <br />
-Hungary_DebreceniKereszt kihagyva (100%), <br />
-Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
-UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
-UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
-UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
-UnitedKingdom_LondonUnderground, not updated, 0.0<br />
-UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
-UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
-UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
-UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
-UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
-UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
-UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.7999999999999972<br />
-UnitedKingdom_SailingBoat, not updated, 0.0<br />
-UnitedKingdom_HendonCircle kihagyva (100%), <br />
-Australia_9thBirthdayInQueensland kihagyva (100%), <br />
-Australia_MayPole kihagyva (100%), <br />
-Australia_PyramidOBadges kihagyva (100%), <br />
-Australia_QLD-Dingo kihagyva (100%), <br />
-Australia_HappyTenMunzee kihagyva (100%), <br />
-Australia_QLDPerm-Temp, <b>updated</b>, 153, <a href="https://www.munzee.com/map/r7hu62k18/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QLDPerm-Temp.json" target="_blank">json</a><br />
-Australia_UnicornInThePark kihagyva (100%), <br />
-Germany_Berlin-HighVoltage kihagyva (100%), <br />
-Germany_ColoursOfBerlin kihagyva (100%), <br />
-Germany_9thBirthdayInBerlin kihagyva (100%), <br />
-Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
-Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
-Hungary_Debrecen kihagyva (100%), <br />
-Hungary_DeoCachingClan kihagyva (100%), <br />
-Hungary_TocoskertsArrows kihagyva (100%), <br />
-UnitedKingdom_WoodlandAnimals-Fox, <b>updated</b>, 111, <a href="https://www.munzee.com/map/gcpupqxt9/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Fox.json" target="_blank">json</a><br />
-UnitedKingdom_WoodlandAnimals-Badger, <b>updated</b>, 63, <a href="https://www.munzee.com/map/gcpupxnwb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Badger.json" target="_blank">json</a><br />
-Canada_OttawaCancerRibbon, <b>updated</b>, 123, <a href="https://www.munzee.com/map/f2469w9ut/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaCancerRibbon.json" target="_blank">json</a> <b>100%</b><br />
-Canada_OttawaGoldfish, <b>updated</b>, 167, <a href="https://www.munzee.com/map/f2469ybkn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaGoldfish.json" target="_blank">json</a> <b>100%</b><br />
-Canada_BananaBread, <b>updated</b>, 169, <a href="https://www.munzee.com/map/f2469yxfs/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_BananaBread.json" target="_blank">json</a> <b>100%</b><br />
-Canada_Elephriends, <b>updated</b>, 277, <a href="https://www.munzee.com/map/f246dr30m/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Elephriends.json" target="_blank">json</a> <b>100%</b><br />
-Canada_LizzysUnicorn, <b>updated</b>, 104, <a href="https://www.munzee.com/map/f246dxcww/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_LizzysUnicorn.json" target="_blank">json</a> <b>100%</b><br />
-Canada_JeffsFarm, <b>updated</b>, 127, <a href="https://www.munzee.com/map/f246dz5s1/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_JeffsFarm.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_TheYellowSubmarine, <b>updated</b>, 353, <a href="https://www.munzee.com/map/u12v57yrs/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheYellowSubmarine.json" target="_blank">json</a> <b>100%</b><br />
-Germany_JohnTheFab41, <b>updated</b>, 1431, <a href="https://www.munzee.com/map/u0w7vzm9n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_JohnTheFab41.json" target="_blank">json</a> <b>100%</b><br />
-Germany_RingoTheFab4, <b>updated</b>, 250, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
-Germany_GeorgeTheFab42, <b>updated</b>, 684, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
-Germany_PaulTheFab43, <b>updated</b>, 1128, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
-Hungary_AlsogallaJoyPrize, <b>updated</b>, 67, <a href="https://www.munzee.com/map/u2mne5ju5/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_AlsogallaJoyPrize.json" target="_blank">json</a><br />
-Hungary_MaXGarden, <b>updated</b>, 64, <a href="https://www.munzee.com/map/u2mndcvk0/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MaXGarden.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Crossbow_Tatabanya, <b>updated</b>, 703, <a href="https://www.munzee.com/map/u2mne32nt/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Crossbow_Tatabanya.json" target="_blank">json</a><br />
-Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 92, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a><br />
-Hungary_SZTE, <b>updated</b>, 100, <a href="https://www.munzee.com/map/u2nr474hq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SZTE.json" target="_blank">json</a><br />
-----csoportok<br />
-----városok<br />
-Australia_city_Brisbane, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Brisbane.json" target="_blank">json</a><br />
-Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
-Hungary_city_Szeged, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr55dy9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Szeged.json" target="_blank">json</a><br />
-Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
-UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
-----felhasználók<br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7hu62k18/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-Jeffeth_completed, <b>updated</b>, <a href="https://www.munzee.com/map/f2469zt39/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_completed.json" target="_blank">json</a><br />
-Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.11.27 10:57:40<br />
-összesen 6928<br />
+Canada_GatineauFMGGarden, <b>updated</b>, 565, <a href="https://www.munzee.com/map/f244tegjx/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauFMGGarden.json" target="_blank">json</a><br />
