--- a/feladat.html
+++ b/feladat.html
@@ -267,3 +267,4 @@ UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
 UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
 Canada_OttawaCancerRibbon, <b>updated</b>, 125, <a href="https://www.munzee.com/map/f2469w9ut/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaCancerRibbon.json" target="_blank">json</a> <b>100%</b><br />
 Canada_OttawaGoldfish, <b>updated</b>, 177, <a href="https://www.munzee.com/map/f2469ybkn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaGoldfish.json" target="_blank">json</a> <b>100%</b><br />
+Canada_BananaBread, <b>updated</b>, 187, <a href="https://www.munzee.com/map/f2469yxfs/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_BananaBread.json" target="_blank">json</a> <b>100%</b><br />
