--- a/feladat.html
+++ b/feladat.html
@@ -285,3 +285,4 @@ Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje, <b>updated</b>, 201, <a href="https://www.munzee.com/map/u2mw68gkq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_LovagokKertje.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_ShieldKecskemet, <b>updated</b>, 73, <a href="https://www.munzee.com/map/u2q4bk348/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldKecskemet.json" target="_blank">json</a><br />
 Hungary_Mini, <b>updated</b>, 64, <a href="https://www.munzee.com/map/u2jqxx3r0/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Mini.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_MinimalIceCubeInBaja, <b>updated</b>, 106, <a href="https://www.munzee.com/map/u2jqxn63r/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MinimalIceCubeInBaja.json" target="_blank">json</a> <b>100%</b><br />
