--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.01 07:04:49<br />
+<b>start</b> - 2022.12.01 19:00:25<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.36982248520710925<br />
@@ -37,13 +37,13 @@ USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.5399999999999991<br />
+USA_StAugustinePirateShip, not updated, 0.8999999999999986<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.6038647342995169<br />
-USA_Turtle, not updated, 0.26455026455025177<br />
+USA_Turtle, not updated, 0.35273368606701894<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.0<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -51,7 +51,7 @@ Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
 Belgium_KnokkeHeist, not updated, 0.25<br />
 Hungary_Evolution, not updated, 0.8333333333333286<br />
-Netherlands_WapenVanEnkhuizen, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.0<br />
@@ -66,7 +66,7 @@ USA_FortMyersAlligator, not updated, 0.0<br />
 Denmark_TheSwanInHilleroed, not updated, 0.0<br />
 Hungary_CsepelObol, not updated, 0.0<br />
 Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
-Czechia_KMZNAK, not updated, 0.0799999999999983<br />
+Czechia_KMZNAK, not updated, 0.11999999999999034<br />
 Luxembourg_LuxembourgFlag, not updated, 0.0<br />
 USA_MarioFireballVoid, not updated, 0.0<br />
 USA_SpyGoggles, not updated, 0.0<br />
@@ -219,7 +219,7 @@ Hungary_GyorVgFarm kihagyva (100%), <br />
 Hungary_GyoriVasutiKert, not updated, 0.0<br />
 Hungary_Colors kihagyva (100%), <br />
 Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, -69.0<br />
+Hungary_TocoskertsArrows3, not updated, 0.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
 Hungary_FlatDebrecen, not updated, 0.0<br />
@@ -282,37 +282,24 @@ Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
 Hungary_SZTE, not updated, 0.0<br />
 Hungary_MarioInVac, not updated, 0.0<br />
-Hungary_LovagokKertje, <b>updated</b>, 201, <a href="https://www.munzee.com/map/u2mw68gkq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_LovagokKertje.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_ShieldKecskemet, <b>updated</b>, 73, <a href="https://www.munzee.com/map/u2q4bk348/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldKecskemet.json" target="_blank">json</a><br />
-Hungary_Mini, <b>updated</b>, 64, <a href="https://www.munzee.com/map/u2jqxx3r0/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Mini.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_MinimalIceCubeInBaja, <b>updated</b>, 106, <a href="https://www.munzee.com/map/u2jqxn63r/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MinimalIceCubeInBaja.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_SailboatAtLakeBalaton, <b>updated</b>, 378, <a href="https://www.munzee.com/map/u2kd4jhcs/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SailboatAtLakeBalaton.json" target="_blank">json</a><br />
-Hungary_EyesInTheNight, <b>updated</b>, 79, <a href="https://www.munzee.com/map/u2mqq3rzy/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_EyesInTheNight.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_PomazLocomotiv, <b>updated</b>, 328, <a href="https://www.munzee.com/map/u2mwcrb2b/14.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_PomazLocomotiv.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_Bratislava, <b>updated</b>, 94, <a href="https://www.munzee.com/map/u2s1v79nt/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_Bratislava.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_ChilliKiller, <b>updated</b>, 383, <a href="https://www.munzee.com/map/u2s1yptfq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChilliKiller.json" target="_blank">json</a><br />
-Slovakia_LakeLighthousePainting, <b>updated</b>, 248, <a href="https://www.munzee.com/map/u2s1yq0c2/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_LakeLighthousePainting.json" target="_blank">json</a><br />
-Slovakia_ChargeBratislava, <b>updated</b>, 181, <a href="https://www.munzee.com/map/u2s1vyxmx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChargeBratislava.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_VirtualJoy, <b>updated</b>, 85, <a href="https://www.munzee.com/map/u2s45g9ze/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_VirtualJoy.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_ElectricLetters, <b>updated</b>, 270, <a href="https://www.munzee.com/map/u2s45fecu/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ElectricLetters.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_DevinCastle, <b>updated</b>, 308, <a href="https://www.munzee.com/map/u2s443y3v/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_DevinCastle.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_EvoFlowerBratislava, <b>updated</b>, 269, <a href="https://www.munzee.com/map/u2s1vsd96/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_EvoFlowerBratislava.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_1stDayEvo, <b>updated</b>, 71, <a href="https://www.munzee.com/map/u2s1v068r/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_1stDayEvo.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_BosniaFlagInBratislava, <b>updated</b>, 143, <a href="https://www.munzee.com/map/u2s1yrt3z/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_BosniaFlagInBratislava.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_AgentSun, <b>updated</b>, 160, <a href="https://www.munzee.com/map/u2s1zptrk/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_AgentSun.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_CandleTombstone, <b>updated</b>, 104, <a href="https://www.munzee.com/map/u2s1zhnn4/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_CandleTombstone.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
-Hungary_city_Kecskemet, <b>updated</b>, <a href="https://www.munzee.com/map/u2mfzfbg7/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Kecskemet.json" target="_blank">json</a><br />
-Hungary_city_Szeged, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr55dy9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Szeged.json" target="_blank">json</a><br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-----felhasználók<br />
-Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
-Neloras_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yzv55/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_completed.json" target="_blank">json</a><br />
-Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
-Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
-Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
-Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.12.01 08:22:04<br />
-összesen 4635<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+<b>stop</b> - 2022.12.01 19:13:17<br />
+összesen 771<br />
